--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <html>
 <head>
-   <title>Seattle Drinking Fountains</title>
-   <link rel="stylesheet" href="style.css">
-   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-   <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/gh/IvanSanchez/Leaflet.Polyline.SnakeAnim/L.Polyline.SnakeAnim.js"></script>
-   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+   <title>Testing the avoid functionality</title>
+   <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+   <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
+  type="text/javascript" charset="utf-8"></script>
+<script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
+  type="text/javascript" charset="utf-8"></script>
+  
 </head>
 
 <body>
-   <div id="control">
-      <h3>Seattle Drinking Fountains Routing</h3>
-      <p>
-         Starting position
-      </p>
-      <input type="text" value="701 Pike St Seattle" id="start" />
-      <button id="change-start">Change</button>
-      <p>
-         Routing options
-      </p>
-      <form id="routing-mode" action="">
-         <input type="radio" name="routing-mode" id="walking" value="pedestrian" checked> Walking<br>
-         <input type="radio" name="routing-mode" id="driving" value="car"> Driving
-      </form>
-      <button id="clear">Clear polylines</button>
-   </div>
-   <div id="map"></div>
-   <script src="index.js" type="text/javascript"></script>s
+   <div style="width: 640px; height: 480px" id="mapContainer"></div>
+
+
+   <script>
+      var platform = new H.service.Platform({
+  'apikey': '{YOUR_API_KEY}'
+});
+
+   // Obtain the default map types from the platform object:
+var defaultLayers = platform.createDefaultLayers();
+
+// Instantiate (and display) a map object:
+var map = new H.Map(
+    document.getElementById('mapContainer'),
+    defaultLayers.vector.normal.map,
+    {
+      zoom: 10,
+      center: { lat: 52.5, lng: 13.4 }
+    });
+   </script>
+   
 </body>
 </html>
