--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    <script>
       var platform = new H.service.Platform({
-  'apikey': '{YOUR_API_KEY}'
+  'apikey': 'h5F7UNUeRM96YMP8D5foodDLcfFcUFGTfLm72FDDiMI{YOUR_API_KEY}'
 });
 
    // Obtain the default map types from the platform object:
