--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>Testing the avoid functionality</title>
+   <title>Test</title>
    
   <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
   <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
