--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
 
 
    <script>
-const Http = new XMLHttpRequest();
-const url='https://b725f05e-9ff0-4a0f-9170-3aaae3ca4f15-bluemix.cloudantnosqldb.appdomain.cloud';
-Http.open("GET", url);
-Http.send();
+// const Http = new XMLHttpRequest();
+// const url='https://b725f05e-9ff0-4a0f-9170-3aaae3ca4f15-bluemix.cloudantnosqldb.appdomain.cloud';
+// Http.open("GET", url);
+// Http.send();
 
-Http.onreadystatechange = (e) => {
-  console.log(Http.responseText)
-}
+// Http.onreadystatechange = (e) => {
+//   console.log(Http.responseText)
+// }
 
 
 
